# data-workflow

./: .gitignore  AGENTS.md  AI_HANDOFF.md  README.md  findings.md  progress.md  task_plan.md  游艺圈数据导入字段规范_v2.md
data-workflow/: .env.example  .gitignore  README.md  pyproject.toml  数据获取执行指南.md
data-workflow/1688/: 1688_relevant_product_20260708.csv  1688_公开商品采集流程.md  collect_1688_detail_sample.py  collect_1688_public_sample.py  filter_1688_relevant.py  run_1688_workflow.py
data-workflow/adapters/1688/: README.md
data-workflow/adapters/douyin/: README.md
data-workflow/adapters/jd/: README.md
data-workflow/adapters/manlifang/: README.md
data-workflow/adapters/pinduoduo/: README.md
data-workflow/adapters/taobao/: README.md
data-workflow/adapters/xianyu/: README.md
data-workflow/contracts/schemas/: 1688_company_asset.schema.json  run_result.schema.json
data-workflow/manlifang/: 漫立方抓包流程.md
data-workflow/manlifang/manufacturer_evidence/: gti_productlist.html
data-workflow/manlifang/tools/: build_manlifang_capture_workbook.py  build_manlifang_delivery_package.py  capture_manlifang_full.py  collect_manlifang_full_via_mitmweb.py  download_manlifang_images.py  finalize_manlifang_full_capture.ps1  start_manlifang_full_capture.ps1
data-workflow/taobao/: collect_taobao_full_workflow.py  taobao_product_category_full_20260709.csv  test_collect_taobao_full_workflow.py  淘宝公开商品采集验证.md
data-workflow/tests/: test_build_asset_manifest.py  test_governance_docs.py  test_repository_layout.py
data-workflow/tools/: build_asset_manifest.py
docs/: README.md  (+6 more)
(+81 files in other folders)
