[project]
name = "youyiquan-data-workflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=3.0.3",
  "pillow>=12.3.0",
  "playwright>=1.61.0",
  "requests>=2.34.2",
]

[project.optional-dependencies]
capture = ["mitmproxy>=11.0.2"]
test = ["pytest>=9.1.1"]

[tool.pytest.ini_options]
testpaths = ["adapters", "tests"]
